# volum-backend

./: .gitignore  CMakeLists.txt  db.sql  env-example.json  program.cpp  readme.md  routes.md  run.sh  todo.md  vcpkg.json
.github/workflows/: build.yml
src/handlers/middlewares/: auth.hpp  request_log.hpp
src/handlers/routes/: create_vm.hpp  defaults.hpp  delete_vm.hpp  get_vm.hpp  list_vms.hpp  start_vm.hpp  stop_vm.hpp  user.hpp
src/providers/: lazy_auth.cpp  lazy_auth.hpp  readme.md
src/proxmox/: methods.cpp  methods.hpp  requests.cpp  requests.hpp  structs.cpp  structs.hpp  utils.hpp
src/services/: auth.hpp  database.cpp  database.hpp  readme.md  webserver.cpp  webserver.hpp
src/utils/: cache.cpp  cache.hpp  config.cpp  config.hpp  debug.hpp  http.cpp  http.hpp  readme.md
